2004-09-09  Christian Ruppert <arc@users.sf.net>
	* uwm/handlers.c(InitHandlers): uwm now stops at initialisation in
	  case no shapes extension is found.

2004-09-02  Christian Ruppert <arc@users.sf.net>
	* uwm/init.c, uwm/uwm.c: moved TheScreen.errout initialisation code
	  from InitUWM to an earlier point in main.
	* uwm/special.c(CheckCPP): fixed broken pipe error in case we don't
	  find a preprocessor binary to execute.
	* uwm/special.c(CheckCPP): fixed broken pipe error in case we don't
	  find a /bin/sh binary to execute (although this might not be our
	  biggest problem in this case)

2004-08-09  Christian Ruppert <arc@users.sf.net>
	* uwm/init.c: removed exit() statements that were introduced for
	  debugging of the config file parsing system.
	* uwm/workspaces.c(SetWSBackground): fixed a small bug in the code
	  setting the background properties.
	* uwm/init.c(InitUWM, ICCCM_WM_Init): added selection of root window
	  events and detection if another WM that might be running.

2004-08-08  Christian Ruppert <arc@users.sf.net>
	* uwm/configconvertors.c(uopt_str_flt and uopt_str_int): added
	  free(in->string) to close memory holes.
	* uwm/confparse.tab.y(uwm_yy_PushContext): fixed erroneous memory
	  reallocation size for workspaces.

2004-05-01  Christian Ruppert <arc@users.sf.net>
	* config/urdb: fixed ddd resource application name.

2004-05-01  Christian Ruppert <arc@users.sf.net>
	* uwm/uwm.c: cleaned up uwm initialisation in main()
	* uwm/uwm.c: fixed bug in HOSTDISPLAY which always used local hostname.
	* uwm/init.c: cleaned up InitUWM() a bit
	* uwm/init.c(ReadConfigFile), uwm/configconvertors.c, uwm/workspaces.c
	  uwm/settings_*_list.h, uwm/menu.c, uwm/properties.c, uwm/widgets.c:
	  fixed the bug with structures embedded in uwm_*_settings
	  structure which are now referenced by pointers to allow reliable
	  check wether option has been set or not.
	* uwm/configconvertors.c, uwm/confparse.h: added convertors for