@@ -1,6 +1,8 @@
 2004-09-09  Christian Ruppert <arc@users.sf.net>
 	* uwm/handlers.c(InitHandlers): uwm now stops at initialisation in
 	  case no shapes extension is found.
+	* uwm/special.c(CheckCPP): slightly modified preprocessor test to check
+	  if cpp takes -D command line options.
 
 2004-09-02  Christian Ruppert <arc@users.sf.net>
 	* uwm/init.c, uwm/uwm.c: moved TheScreen.errout initialisation code
